@@ -262,12 +262,12 @@ ProjectSettingsPanel.rectilinearLineOption=Rectilinear Lines
 ProjectSettingsPanel.relationshipLineStyle=Draw Relationships With:
 ProjectSettingsPanel.showAKTags=Show AK Tags
 ProjectSettingsPanel.showFKTags=Show FK Tags
-ProjectSettingsPanel.showForeignKeyColumns=Show Foreign Key Columns
-ProjectSettingsPanel.showIndexedColumns=Show Indexed Columns
+ProjectSettingsPanel.showAll=Show All Columns
+ProjectSettingsPanel.showPKFKUniqueIndexed=Show PK + FK + Unique + Indexed Columns
 ProjectSettingsPanel.showPKTags=Show PK Tags
-ProjectSettingsPanel.showPrimaryKeyColumns=Show Primary Key Columns
-ProjectSettingsPanel.showRemainingColumns=Show Remaining Columns
-ProjectSettingsPanel.showUniqueColumns=Show Unique Columns
+ProjectSettingsPanel.showPKFK=Show PK and FK Columns only
+ProjectSettingsPanel.showPK=Show PK Columns only
+ProjectSettingsPanel.showPKFKUnique=Show PK + FK + Unique Columns
 ProjectSettingsPanel.snapshotSourceDbOption=Snapshot Entire Source Database in Project File?
 RecentMenu.clearRecentFiles=Clear Recent Files
 RecentMenu.couldNotOpenFile=Couldn't open file.
